# otel-genai-bridge-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bridge.rs  lib.rs
tests/: test_bridge.rs
